home tab with footer arrow scroll up

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 *{
   box-sizing: border-box;
 }
+*{
+  scroll-behavior: smooth;
+}
 @import url('https://fonts.googleapis.com/css?family=Rubik&display=swap');
 
  body {
