modal component added

--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -14,7 +14,7 @@
         font-weight: 500;
         color: #fff;
         padding-right: .5rem;
-  
+        text-decoration: none;
     }
     .topArrow{
         position: relative;
