--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -7,8 +7,7 @@
     .navbar-brand {
       font-size: 30px;
       font-weight: bold;
-      text-shadow: 0 1px 0 #ccc, 0 2px 0 #ccc, 0 2px 0 #ccc, 0 4px 0 #ccc,
-        0 3px 0 #ccc, 0 6px 0 #ccc, 0 7px 9px rgba(0, 0, 0, 0.5);
+      text-shadow: 0px 8px 15px rgba(0, 0, 0, 0.6);
     }
     .navbar-dark .navbar-nav .nav-link {
       color: var(--navbar-link-color);
