--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -1,7 +1,7 @@
 .footer{
     background-color:black;
     p{
-        color: grey;
+        color: darkorange;
     }
     .footer-links {
         padding-left: 0;
