--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -13,5 +13,16 @@
       color: var(--navbar-link-color);
       font-size: 20px;
     }
+    a {
+      color: #fff;
+      font-size: 20px;
+      padding-right: 20px;
+      text-decoration: none;
+  }
+    .active{
+      color: #ffeb3b;
+    font-size: 21px;
+    font-weight: bold;
+     }
   }
   
