add react router hooks with params

--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -20,7 +20,7 @@
       text-decoration: none;
   }
     .active{
-      color: #ffeb3b;
+      color: darkorange;
     font-size: 21px;
     font-weight: bold;
      }
