api call using params

--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -19,6 +19,9 @@
       padding-right: 20px;
       text-decoration: none;
   }
+  .dropdown-menu{
+    background-color: #3f51b5;
+  }
     .active{
       color: darkorange;
     font-size: 21px;
