--- a/src/pages/About/index.scss
+++ b/src/pages/About/index.scss
@@ -1,18 +1,30 @@
-.aboutContainer{
-    --active-btn-color:#00bcd4;
-    --inactive-btn-color:#f44336;
-    --active-btn-text:#fff;
-    --inactive-btn-text:#fff;
-    .activeBtn{
-        background: var(--active-btn-color);
-        color: var(--active-btn-text);
-        box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.6);
-        border-radius: 0px;
-      }
-      .inactiveBtn{
-        background-color: var(--inactive-btn-color);
-        color: var(--inactive-btn-text);
-        border-radius: 0px;
-      }
-
+.aboutContainer {
+  --active-btn-color: #00bcd4;
+  --inactive-btn-color: #f44336;
+  --active-btn-text: #fff;
+  --inactive-btn-text: #fff;
+  .activeBtn {
+    background: var(--active-btn-color);
+    color: var(--active-btn-text);
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.6);
+    border-radius: 0px;
+  }
+  .inactiveBtn {
+    background-color: var(--inactive-btn-color);
+    color: var(--inactive-btn-text);
+    border-radius: 0px;
+  }
+  .sideNav {
+    background: #15171c;
+    width: 250px;
+    height: 100vh;
+    // display: flex;
+    // justify-content: center;
+    position: fixed;
+    color: #fff;
+    top: 0;
+    left: 0;
+    transition: 0.5s; 
+    z-index: 10;
+  }
 }
