--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -1,19 +1,84 @@
-.homeContainer{
-  --active-btn-color:#3f51b5;
-  --inactive-btn-color:black;
-  --active-btn-text:#fff;
-  --inactive-btn-text:darkorange;
+.homeContainer {
+  --active-btn-color: #3f51b5;
+  --inactive-btn-color: black;
+  --active-btn-text: #fff;
+  --inactive-btn-text: darkorange;
 
-  .activeBtn{
+  .activeBtn {
     background: var(--active-btn-color);
     color: var(--active-btn-text);
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.6);
   }
-  .inactiveBtn{
+  .inactiveBtn {
     background-color: var(--inactive-btn-color);
     color: var(--inactive-btn-text);
   }
 
-
+  .navWrapper{
+    background-color: red;
+  }
+  nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem 0;
+    flex-wrap: wrap;
     
+  }
+
+  nav .logo-section {
+    display: flex;
+    align-items: center;
+  }
+
+  .search-block {
+    border: 1px solid #d9dde7;
+    padding: 0.5rem 0.8rem;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    margin-left: 1.4rem;
+  }
+  .hamburger {
+    display: none;
+  }
+  nav ul.nav-list {
+    width: auto;
+    display: flex;
+    align-items: center;
+    background: transparent;
+    margin-top: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+nav ul.nav-list li {
+    padding-bottom: 0;
+    margin-left: 1.8rem;
+    
+}
+
+nav ul.nav-list li a{
+  text-decoration: none;
+  font-size: 22px;
+  color: #fff;
+}
+
+@media (max-width:767px){
+  .hamburger{
+    display: block;
+  }
+  nav ul.mobile-nav-list{
+    width: 100%;
+    text-align: center;
+    list-style-type: none;
+    padding: 1rem;
+    background: whitesmoke;
+    margin-top: 1rem;
+  }
+ nav ul.nav-list{
+    display: none;
+  }
+}
+  
 }
